# redox-commander

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/api/: Cargo.toml
crates/api/src/: key.rs  lib.rs  models.rs
crates/api/src/models/: auth.rs  environment.rs
crates/core/: Cargo.toml
crates/core/src/: configuration.rs  lib.rs  util.rs
crates/core/src/configuration/: model.rs
crates/core/src/util/: paths.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  components.rs  lib.rs  mock_components.rs  pages.rs  reporting.rs  shared_components.rs  util.rs
crates/tui/src/app/: context.rs  event_queue.rs  model.rs
crates/tui/src/components/: clock.rs  global_listener.rs  reporter.rs
crates/tui/src/mock_components/: focusable_paragraph.rs  label.rs  listener.rs  text_area.rs  utils.rs
crates/tui/src/pages/: primary.rs
crates/tui/src/pages/primary/: components.rs
crates/tui/src/pages/primary/components/: clock.rs  deployment.rs  environment.rs  organization.rs  select.rs
crates/tui/src/shared_components/: box_with_title.rs  primary_control.rs  time.rs
crates/tui2/: Cargo.toml
crates/tui2/src/: app.rs  shared_components.rs
crates/tui2/src/pages/: primary.rs
src/: main.rs
static/: demo.tape
