[package]
name = "redox_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = "8.1.1"
reqwest = { version="0.12.8", features = ["json"] }
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
strum = { workspace = true }
tokio = {workspace = true}
