[package]
name = "redox_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
dirs = {workspace = true}
itertools = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true, features = ["std"]}
serde_yaml = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
