[package]
name = "redox_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
chrono = { workspace = true }
iocraft = "0.4.0"
redox_api={workspace = true}
redox_core={workspace = true}
strum = { workspace = true }
tokio = { workspace = true }
tracing = {workspace = true}
